# poo-2023-01

./: .gitignore  .travis.yml  README.md  makefile  pyproject.toml
T07/: AlunoPessoa.py  Festa.py  Interface.py  Permuta.py  PessoaComAtributos.py  PessoaFisica.py  PessoaJuridica.py  ProvaComInterface.py  ReligiaoDevoto.py  Revista.py  Uniao.py
scripts/: class_counter.py  line_counter.py  test_suite.py
t07/: README.md  aluno_pessoa.py  casa.py  pessoa_abstrata.py  pessoa_com_autorrelacionamento.py  pessoa_com_nome.py  pessoa_com_tipos_classicos.py  pessoa_fisica.py  pessoa_juridica.py  pessoas_com_heranca.py  prova.py  prova_com_interface.py  referencia.py  religiao_devoto.py  revista.py  testa_soma_naturais.py  uniao.py
t08/: README.md  curva_ponto.py  disciplina.py  escola_endereco.py  evento_interacao.py  linguagem_projeto.py  pais_cidades_capital.py  permissoes_arquivo.py  pessoa_emprego_empresa.py  pessoa_empresa.py  projeto_pessoa.py  texto_paragrafo_sentenca.py  usuario_diretorio.py
t09/: README.md  caixeiro_viajante.py  circulo.py  circulo_ponto.py  cliente_fornecedor_transacao.py  conteiner_elemento_objeto.py  mamifero_elefante.py  pessoa_habito.py  usuario_pessoa.py
t10/: README.MD  bicicleta.py  cliente_ciclista.py  mecanico.py  oficina.py  passeio_ciclistico.py  pessoa.py
t11/: README.MD  armario.py  cadeira_pessoa.py  carne.py  casa.py  florestas.py  frase.py  janelas.py  lanchonete.py  periodo.py  preco.py
t12/: README.MD  arvore1.py  arvore2.py  duplamente_encadeada.py  fifo.py  grafo.py  pilha.py  vetor.py
t13/: README.MD  aerodromo.py  (+3 more)
(+109 files in other folders)
