[tool.poetry]
name = "poo-2023-1"
version = "0.1.0"
description = "Pacote contendo a implementação dos exercícios propostos da disciplina de Programação Orientada a Objetos do curso de Engenharia de Software (Turma 2023-1) da Universidade Federal de Goiás"
authors = ["Victor M. Vieira <53177932+vmvuno@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "poo_2023_1"}]

[tool.poetry.dependencies]
python = "^3.9"
coveralls = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
pyright = "^1.1.311"
pytest-flake8 = "^1.1.1"
pytest-cov = "^4.1.0"
pyproject-flake8 = "^6.0.0.post1"
poethepoet = "^0.20.0"

[tool.flake8]
max-line-length = 80
max-complexity = 10

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional= true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true
show_error_codes = true

[tool.poe]
poetry_command = ""

[tool.poe.tasks.run_tests]
script = "scripts.test_suite:run_test_suite()"
print_result = true

[tool.pytest.ini_options]
minversion = 6.0
addopts = ""
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
